--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "react-scripts": "1.0.13"
+    "react-dom": "^16.14.0",
+    "react-redux": "^5.0.0",
+    "react-scripts": "1.0.13",
+    "redux": "^4.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
